Реализован POST /predict
