# backend/docs/swagger.json
@@ -78,6 +78,57 @@
                 }
             }
         },
+        "/predict": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prediction"
+                ],
+                "summary": "Предсказать цифры",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Файлы",
+                        "name": "files",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schema.Prediction"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/refresh": {
             "get": {
                 "security": [
@@ -265,6 +316,20 @@
                 },
                 "user": {
                     "$ref": "#/definitions/schema.User"
+                }
+            }
+        },
+        "schema.Prediction": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "meter_readings": {
+                    "type": "string"
+                },
+                "metric": {
+                    "type": "number"
                 }
             }
         },
